--- a/produ/ios/Runner/Info.plist
+++ b/produ/ios/Runner/Info.plist
@@ -51,5 +51,11 @@
 	<string>Explanation on why the camera access is needed.</string>	
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Explanation on why the microphone access is needed.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
+
 </plist>
