--- a/produ/android/app/src/main/AndroidManifest.xml
+++ b/produ/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data 
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA0YvMhqbiOOZ5eh8jN67RPsp_PYVnX4j4" />
+
     </application>
  
     <uses-permission android:name="android.permission.INTERNET"/>
