--- a/produ/pubspec.yaml
+++ b/produ/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   video_player: ^2.4.8
   camera: ^0.10.0+4
   image_picker: ^0.8.6
+  google_maps_flutter: ^2.2.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/videos/
+      - assets/found-location.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
